package entity;

public interface Message {

}
