package entity;

import java.time.LocalDateTime;

public interface User {
    String getName();

    String getPassword();
    String getEmail();
    String getStatus();


}
